--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,13 +43,12 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@qualweb/act-rules": "^0.3.31",
-    "@qualweb/best-practices": "^0.3.1",
+    "@qualweb/act-rules": "^0.3.32",
+    "@qualweb/best-practices": "^0.3.2",
     "@qualweb/crawler": "^0.1.1",
-    "@qualweb/css-techniques": "^0.3.3",
-    "@qualweb/earl-reporter": "^0.2.3",
-    "@qualweb/html-techniques": "^0.3.0",
-    "@qualweb/wappalyzer": "^0.1.0",
+    "@qualweb/css-techniques": "^0.3.5",
+    "@qualweb/earl-reporter": "^0.2.4",
+    "@qualweb/html-techniques": "^0.3.3",
     "css-select": "^2.1.0",
     "domhandler": "^3.0.0",
     "domutils": "^2.0.0",
@@ -59,13 +58,12 @@
     "puppeteer": "^2.1.1"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.3.22",
-    "@types/node": "^13.9.2",
+    "@qualweb/types": "^0.3.26",
+    "@types/node": "^13.11.1",
     "@types/puppeteer": "^2.0.1",
     "chai": "^4.2.0",
     "mocha": "^7.1.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5",
+    "node-fetch": "^2.6.0",
     "typescript": "^3.8.3"
   }
 }
