--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,6 +49,7 @@
     "@qualweb/css-techniques": "^0.3.5",
     "@qualweb/earl-reporter": "^0.2.4",
     "@qualweb/html-techniques": "^0.3.3",
+    "css": "^2.2.4",
     "css-select": "^2.1.0",
     "domhandler": "^3.0.0",
     "domutils": "^2.0.0",
