--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,30 +1,31 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "QualWeb best practices",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
     "tsc": "tsc",
     "test": "mocha test/**/*",
-    "test-bp1": "mocha test/best-practices/QW-BP1.spec.js",
-    "test-bp2": "mocha test/best-practices/QW-BP2.spec.js",
-    "test-bp3": "mocha test/best-practices/QW-BP3.spec.js",
-    "test-bp4": "mocha test/best-practices/QW-BP4.spec.js",
-    "test-bp5": "mocha test/best-practices/QW-BP5.spec.js",
-    "test-bp6": "mocha test/best-practices/QW-BP6.spec.js",
-    "test-bp7": "mocha test/best-practices/QW-BP7.spec.js",
-    "test-bp8": "mocha test/best-practices/QW-BP8.spec.js",
-    "test-bp9": "mocha test/best-practices/QW-BP9.spec.js",
-    "test-bp10": "mocha test/best-practices/QW-BP10.spec.js",
-    "test-bp11": "mocha test/best-practices/QW-BP11.spec.js",
-    "test-bp12": "mocha test/best-practices/QW-BP12.spec.js",
-    "test-bp13": "mocha test/best-practices/QW-BP13.spec.js",
-    "test-bp14": "mocha test/best-practices/QW-BP14.spec.js",
-    "test-bp15": "mocha test/best-practices/QW-BP15.spec.js",
-    "test-bp16": "mocha test/best-practices/QW-BP16.spec.js",
+    "test:bp1": "mocha test/best-practices/QW-BP1.spec.js",
+    "test:bp2": "mocha test/best-practices/QW-BP2.spec.js",
+    "test:bp3": "mocha test/best-practices/QW-BP3.spec.js",
+    "test:bp4": "mocha test/best-practices/QW-BP4.spec.js",
+    "test:bp5": "mocha test/best-practices/QW-BP5.spec.js",
+    "test:bp6": "mocha test/best-practices/QW-BP6.spec.js",
+    "test:bp7": "mocha test/best-practices/QW-BP7.spec.js",
+    "test:bp8": "mocha test/best-practices/QW-BP8.spec.js",
+    "test:bp9": "mocha test/best-practices/QW-BP9.spec.js",
+    "test:bp10": "mocha test/best-practices/QW-BP10.spec.js",
+    "test:bp11": "mocha test/best-practices/QW-BP11.spec.js",
+    "test:bp12": "mocha test/best-practices/QW-BP12.spec.js",
+    "test:bp13": "mocha test/best-practices/QW-BP13.spec.js",
+    "test:bp14": "mocha test/best-practices/QW-BP14.spec.js",
+    "test:bp15": "mocha test/best-practices/QW-BP15.spec.js",
+    "test:bp16": "mocha test/best-practices/QW-BP16.spec.js",
     "clean": "node clean.js",
-    "build": "npm run clean && tsc --build",
+    "compile:bps": "node compile-bps.js",
+    "build": "npm run compile:bps && npm run clean && tsc --build",
     "pub": "npm run build && npm publish --access=public"
   },
   "repository": {
@@ -45,21 +46,21 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.3.22",
+    "@qualweb/types": "^0.3.28",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^13.11.1",
+    "@types/node": "^13.13.4",
     "@types/puppeteer": "^2.0.1",
     "chai": "^4.2.0",
     "css": "^2.2.4",
-    "mocha": "^7.1.1",
-    "puppeteer": "^2.1.1",
+    "mocha": "^7.1.2",
+    "puppeteer": "^3.0.2",
     "request": "^2.88.2",
     "stew-select": "0.0.5",
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.46",
+    "@qualweb/util": "^0.2.58",
     "htmlparser2": "^4.1.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0"
