updated dependencies, report interface, tests. Added accessibleName result for some rules

--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/act-rules",
-  "version": "0.3.33",
+  "version": "0.3.34",
   "description": "ACT-R module for qualweb accessibility evaluator",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -8,45 +8,45 @@
     "test": "mocha --recursive",
     "tsc": "tsc",
     "test:all": "mocha test/act-rules.spec.js",
-    "test-r1": "mocha test/rules/QW-ACT-R1.spec.js",
-    "test-r2": "mocha test/rules/QW-ACT-R2.spec.js",
-    "test-r3": "mocha test/rules/QW-ACT-R3.spec.js",
-    "test-r4": "mocha test/rules/QW-ACT-R4.spec.js",
-    "test-r5": "mocha test/rules/QW-ACT-R5.spec.js",
-    "test-r6": "mocha test/rules/QW-ACT-R6.spec.js",
-    "test-r7": "mocha test/rules/QW-ACT-R7.spec.js",
-    "test-r8": "mocha test/rules/QW-ACT-R8.spec.js",
-    "test-r9": "mocha test/rules/QW-ACT-R9.spec.js",
-    "test-r10": "mocha test/rules/QW-ACT-R10.spec.js",
-    "test-r11": "mocha test/rules/QW-ACT-R11.spec.js",
-    "test-r12": "mocha test/rules/QW-ACT-R12.spec.js",
-    "test-r13": "mocha test/rules/QW-ACT-R13.spec.js",
-    "test-r14": "mocha test/rules/QW-ACT-R14.spec.js",
-    "test-r15": "mocha test/rules/QW-ACT-R15.spec.js",
-    "test-r16": "mocha test/rules/QW-ACT-R16.spec.js",
-    "test-r17": "mocha test/rules/QW-ACT-R17.spec.js",
-    "test-r18": "mocha test/rules/QW-ACT-R18.spec.js",
-    "test-r19": "mocha test/rules/QW-ACT-R19.spec.js",
-    "test-r20": "mocha test/rules/QW-ACT-R20.spec.js",
-    "test-r21": "mocha test/rules/QW-ACT-R21.spec.js",
-    "test-r22": "mocha test/rules/QW-ACT-R22.spec.js",
-    "test-r23": "mocha test/rules/QW-ACT-R23.spec.js",
-    "test-r24": "mocha test/rules/QW-ACT-R24.spec.js",
-    "test-r25": "mocha test/rules/QW-ACT-R25.spec.js",
-    "test-r26": "mocha test/rules/QW-ACT-R26.spec.js",
-    "test-r27": "mocha test/rules/QW-ACT-R27.spec.js",
-    "test-r28": "mocha test/rules/QW-ACT-R28.spec.js",
-    "test-r29": "mocha test/rules/QW-ACT-R29.spec.js",
-    "test-r30": "mocha test/rules/QW-ACT-R30.spec.js",
-    "test-r31": "mocha test/rules/QW-ACT-R31.spec.js",
-    "test-r32": "mocha test/rules/QW-ACT-R32.spec.js",
-    "test-r33": "mocha test/rules/QW-ACT-R33.spec.js",
-    "test-r34": "mocha test/rules/QW-ACT-R34.spec.js",
-    "test-r35": "mocha test/rules/QW-ACT-R35.spec.js",
-    "test-r36": "mocha test/rules/QW-ACT-R36.spec.js",
-    "test-r37": "mocha test/rules/QW-ACT-R37.spec.js",
-    "test-r38": "mocha test/rules/QW-ACT-R38.spec.js",
-    "test-r39": "mocha test/rules/QW-ACT-R39.spec.js",
+    "test:r1": "mocha test/rules/QW-ACT-R1.spec.js",
+    "test:r2": "mocha test/rules/QW-ACT-R2.spec.js",
+    "test:r3": "mocha test/rules/QW-ACT-R3.spec.js",
+    "test:r4": "mocha test/rules/QW-ACT-R4.spec.js",
+    "test:r5": "mocha test/rules/QW-ACT-R5.spec.js",
+    "test:r6": "mocha test/rules/QW-ACT-R6.spec.js",
+    "test:r7": "mocha test/rules/QW-ACT-R7.spec.js",
+    "test:r8": "mocha test/rules/QW-ACT-R8.spec.js",
+    "test:r9": "mocha test/rules/QW-ACT-R9.spec.js",
+    "test:r10": "mocha test/rules/QW-ACT-R10.spec.js",
+    "test:r11": "mocha test/rules/QW-ACT-R11.spec.js",
+    "test:r12": "mocha test/rules/QW-ACT-R12.spec.js",
+    "test:r13": "mocha test/rules/QW-ACT-R13.spec.js",
+    "test:r14": "mocha test/rules/QW-ACT-R14.spec.js",
+    "test:r15": "mocha test/rules/QW-ACT-R15.spec.js",
+    "test:r16": "mocha test/rules/QW-ACT-R16.spec.js",
+    "test:r17": "mocha test/rules/QW-ACT-R17.spec.js",
+    "test:r18": "mocha test/rules/QW-ACT-R18.spec.js",
+    "test:r19": "mocha test/rules/QW-ACT-R19.spec.js",
+    "test:r20": "mocha test/rules/QW-ACT-R20.spec.js",
+    "test:r21": "mocha test/rules/QW-ACT-R21.spec.js",
+    "test:r22": "mocha test/rules/QW-ACT-R22.spec.js",
+    "test:r23": "mocha test/rules/QW-ACT-R23.spec.js",
+    "test:r24": "mocha test/rules/QW-ACT-R24.spec.js",
+    "test:r25": "mocha test/rules/QW-ACT-R25.spec.js",
+    "test:r26": "mocha test/rules/QW-ACT-R26.spec.js",
+    "test:r27": "mocha test/rules/QW-ACT-R27.spec.js",
+    "test:r28": "mocha test/rules/QW-ACT-R28.spec.js",
+    "test:r29": "mocha test/rules/QW-ACT-R29.spec.js",
+    "test:r30": "mocha test/rules/QW-ACT-R30.spec.js",
+    "test:r31": "mocha test/rules/QW-ACT-R31.spec.js",
+    "test:r32": "mocha test/rules/QW-ACT-R32.spec.js",
+    "test:r33": "mocha test/rules/QW-ACT-R33.spec.js",
+    "test:r34": "mocha test/rules/QW-ACT-R34.spec.js",
+    "test:r35": "mocha test/rules/QW-ACT-R35.spec.js",
+    "test:r36": "mocha test/rules/QW-ACT-R36.spec.js",
+    "test:r37": "mocha test/rules/QW-ACT-R37.spec.js",
+    "test:r38": "mocha test/rules/QW-ACT-R38.spec.js",
+    "test:r39": "mocha test/rules/QW-ACT-R39.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
     "build": "npm run compile:rules && npm run clean && tsc --build",
@@ -67,24 +67,24 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "^0.3.26",
+    "@qualweb/types": "^0.3.28",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^13.11.0",
+    "@types/node": "^13.13.5",
     "chai": "^4.2.0",
     "css": "^2.2.4",
     "htmlparser2": "^4.0.0",
-    "mocha": "^7.0.1",
+    "mocha": "^7.1.2",
     "node-fetch": "^2.6.0",
-    "puppeteer": "^2.1.1",
+    "puppeteer": "^3.0.3",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@qualweb/util": "^0.2.57",
+    "@qualweb/util": "^0.2.58",
     "css-select": "^2.1.0",
     "languagedetect": "^2.0.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
-    "rematrix": "^0.5.0",
+    "rematrix": "^0.7.0",
     "string-pixel-width": "^1.10.0"
   }
 }
