updated dependencies, tests, README.md

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@qualweb/core",
-  "version": "0.3.17",
+  "version": "0.3.18",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
+    "test:crawler": "mocha test/crawler.spec.js",
+    "test:parallel": "mocha test/parallel.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
@@ -43,12 +45,12 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@qualweb/act-rules": "^0.3.33",
-    "@qualweb/best-practices": "^0.3.2",
-    "@qualweb/crawler": "^0.1.1",
-    "@qualweb/css-techniques": "^0.3.5",
-    "@qualweb/earl-reporter": "^0.2.4",
-    "@qualweb/html-techniques": "^0.3.3",
+    "@qualweb/act-rules": "^0.3.34",
+    "@qualweb/best-practices": "^0.3.3",
+    "@qualweb/crawler": "^0.2.2",
+    "@qualweb/css-techniques": "^0.3.6",
+    "@qualweb/earl-reporter": "^0.2.5",
+    "@qualweb/html-techniques": "^0.3.4",
     "css": "^2.2.4",
     "css-select": "^2.1.0",
     "domhandler": "^3.0.0",
@@ -56,14 +58,14 @@
     "htmlparser2": "^4.1.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
-    "puppeteer": "^3.0.1"
+    "puppeteer": "^3.0.3"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.3.26",
-    "@types/node": "^13.13.2",
+    "@qualweb/types": "^0.3.29",
+    "@types/node": "^13.13.5",
     "@types/puppeteer": "^2.0.1",
     "chai": "^4.2.0",
-    "mocha": "^7.1.1",
+    "mocha": "^7.1.2",
     "node-fetch": "^2.6.0",
     "typescript": "^3.8.3"
   }
