--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -5,52 +5,52 @@
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
-    "test": "mocha --recursive",
+    "test": "npm i && mocha --recursive",
     "tsc": "tsc",
-    "test:all": "mocha test/act-rules.spec.js",
-    "test-all": "mocha test/act-rules-all.spec.js",
-    "test-r1": "mocha test/rules/QW-ACT-R1.spec.js",
-    "test-r2": "mocha test/rules/QW-ACT-R2.spec.js",
-    "test-r3": "mocha test/rules/QW-ACT-R3.spec.js",
-    "test-r4": "mocha test/rules/QW-ACT-R4.spec.js",
-    "test-r5": "mocha test/rules/QW-ACT-R5.spec.js",
-    "test-r6": "mocha test/rules/QW-ACT-R6.spec.js",
-    "test-r7": "mocha test/rules/QW-ACT-R7.spec.js",
-    "test-r8": "mocha test/rules/QW-ACT-R8.spec.js",
-    "test-r9": "mocha test/rules/QW-ACT-R9.spec.js",
-    "test-r10": "mocha test/rules/QW-ACT-R10.spec.js",
-    "test-r11": "mocha test/rules/QW-ACT-R11.spec.js",
-    "test-r12": "mocha test/rules/QW-ACT-R12.spec.js",
-    "test-r13": "mocha test/rules/QW-ACT-R13.spec.js",
-    "test-r14": "mocha test/rules/QW-ACT-R14.spec.js",
-    "test-r15": "mocha test/rules/QW-ACT-R15.spec.js",
-    "test-r16": "mocha test/rules/QW-ACT-R16.spec.js",
-    "test-r17": "mocha test/rules/QW-ACT-R17.spec.js",
-    "test-r18": "mocha test/rules/QW-ACT-R18.spec.js",
-    "test-r19": "mocha test/rules/QW-ACT-R19.spec.js",
-    "test-r20": "mocha test/rules/QW-ACT-R20.spec.js",
-    "test-r21": "mocha test/rules/QW-ACT-R21.spec.js",
-    "test-r22": "mocha test/rules/QW-ACT-R22.spec.js",
-    "test-r23": "mocha test/rules/QW-ACT-R23.spec.js",
-    "test-r24": "mocha test/rules/QW-ACT-R24.spec.js",
-    "test-r25": "mocha test/rules/QW-ACT-R25.spec.js",
-    "test-r26": "mocha test/rules/QW-ACT-R26.spec.js",
-    "test-r27": "mocha test/rules/QW-ACT-R27.spec.js",
-    "test-r28": "mocha test/rules/QW-ACT-R28.spec.js",
-    "test-r29": "mocha test/rules/QW-ACT-R29.spec.js",
-    "test-r30": "mocha test/rules/QW-ACT-R30.spec.js",
-    "test-r31": "mocha test/rules/QW-ACT-R31.spec.js",
-    "test-r32": "mocha test/rules/QW-ACT-R32.spec.js",
-    "test-r33": "mocha test/rules/QW-ACT-R33.spec.js",
-    "test-r34": "mocha test/rules/QW-ACT-R34.spec.js",
-    "test-r35": "mocha test/rules/QW-ACT-R35.spec.js",
-    "test-r36": "mocha test/rules/QW-ACT-R36.spec.js",
-    "test-r37": "mocha test/rules/QW-ACT-R37.spec.js",
-    "test-r38": "mocha test/rules/QW-ACT-R38.spec.js",
-    "test-r39": "mocha test/rules/QW-ACT-R39.spec.js",
+    "test:all": "npm install && mocha test/act-rules.spec.js",
+    "test-all": "npm i && mocha test/act-rules-all.spec.js",
+    "test-r1": "npm i && mocha test/rules/QW-ACT-R1.spec.js",
+    "test-r2": "npm i && mocha test/rules/QW-ACT-R2.spec.js",
+    "test-r3": "npm i && mocha test/rules/QW-ACT-R3.spec.js",
+    "test-r4": "npm i && mocha test/rules/QW-ACT-R4.spec.js",
+    "test-r5": "npm i && mocha test/rules/QW-ACT-R5.spec.js",
+    "test-r6": "npm i && mocha test/rules/QW-ACT-R6.spec.js",
+    "test-r7": "npm i && mocha test/rules/QW-ACT-R7.spec.js",
+    "test-r8": "npm i && mocha test/rules/QW-ACT-R8.spec.js",
+    "test-r9": "npm i && mocha test/rules/QW-ACT-R9.spec.js",
+    "test-r10": "npm i && mocha test/rules/QW-ACT-R10.spec.js",
+    "test-r11": "npm i && mocha test/rules/QW-ACT-R11.spec.js",
+    "test-r12": "npm i && mocha test/rules/QW-ACT-R12.spec.js",
+    "test-r13": "npm i && mocha test/rules/QW-ACT-R13.spec.js",
+    "test-r14": "npm i && mocha test/rules/QW-ACT-R14.spec.js",
+    "test-r15": "npm i && mocha test/rules/QW-ACT-R15.spec.js",
+    "test-r16": "npm i && mocha test/rules/QW-ACT-R16.spec.js",
+    "test-r17": "npm i && mocha test/rules/QW-ACT-R17.spec.js",
+    "test-r18": "npm i && mocha test/rules/QW-ACT-R18.spec.js",
+    "test-r19": "npm i && mocha test/rules/QW-ACT-R19.spec.js",
+    "test-r20": "npm i && mocha test/rules/QW-ACT-R20.spec.js",
+    "test-r21": "npm i && mocha test/rules/QW-ACT-R21.spec.js",
+    "test-r22": "npm i && mocha test/rules/QW-ACT-R22.spec.js",
+    "test-r23": "npm i && mocha test/rules/QW-ACT-R23.spec.js",
+    "test-r24": "npm i && mocha test/rules/QW-ACT-R24.spec.js",
+    "test-r25": "npm i && mocha test/rules/QW-ACT-R25.spec.js",
+    "test-r26": "npm i && mocha test/rules/QW-ACT-R26.spec.js",
+    "test-r27": "npm i && mocha test/rules/QW-ACT-R27.spec.js",
+    "test-r28": "npm i && mocha test/rules/QW-ACT-R28.spec.js",
+    "test-r29": "npm i && mocha test/rules/QW-ACT-R29.spec.js",
+    "test-r30": "npm i && mocha test/rules/QW-ACT-R30.spec.js",
+    "test-r31": "npm i && mocha test/rules/QW-ACT-R31.spec.js",
+    "test-r32": "npm i && mocha test/rules/QW-ACT-R32.spec.js",
+    "test-r33": "npm i && mocha test/rules/QW-ACT-R33.spec.js",
+    "test-r34": "npm i && mocha test/rules/QW-ACT-R34.spec.js",
+    "test-r35": "npm i && mocha test/rules/QW-ACT-R35.spec.js",
+    "test-r36": "npm i && mocha test/rules/QW-ACT-R36.spec.js",
+    "test-r37": "npm i && mocha test/rules/QW-ACT-R37.spec.js",
+    "test-r38": "npm i && mocha test/rules/QW-ACT-R38.spec.js",
+    "test-r39": "npm i && mocha test/rules/QW-ACT-R39.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
-    "build": "npm run compile:rules && npm run clean && tsc --build",
+    "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development --watch",
     "pub": "npm run build && npm publish"
   },
   "keywords": [
@@ -70,7 +70,7 @@
   "devDependencies": {
     "@qualweb/types": "file:../types",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^13.11.0",
+    "@types/node": "^13.13.5",
     "chai": "^4.2.0",
     "css": "^2.2.4",
     "htmlparser2": "^4.0.0",
