--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -50,7 +50,7 @@
     "test-r39": "npm i && mocha test/rules/QW-ACT-R39.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
-    "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development --watch",
+    "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
     "pub": "npm run build && npm publish"
   },
   "keywords": [
@@ -77,7 +77,9 @@
     "mocha": "^7.0.1",
     "node-fetch": "^2.6.0",
     "puppeteer": "^2.1.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack": "4.41.5",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "@qualweb/qw-element": "file:../qw-element",
