--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,12 +46,13 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@qualweb/act-rules": "^0.3.38",
-    "@qualweb/best-practices": "^0.3.4",
+    "@qualweb/act-rules": "^0.4.1",
+    "@qualweb/best-practices": "^0.4.1",
+    "@qualweb/qw-page": "^0.1.2",
     "@qualweb/crawler": "^0.1.1",
     "@qualweb/css-techniques": "^0.3.7",
     "@qualweb/earl-reporter": "^0.2.5",
-    "@qualweb/html-techniques": "^0.3.5",
+    "@qualweb/html-techniques": "^0.4.1",
     "css": "^2.2.4",
     "css-select": "^2.1.0",
     "domhandler": "^3.0.0",
@@ -62,7 +63,7 @@
     "puppeteer": "^3.0.4"
   },
   "devDependencies": {
-    "@qualweb/types": "^0.3.31",
+    "@qualweb/types": "^0.4.0",
     "@types/node": "^13.13.5",
     "@types/puppeteer": "^2.0.1",
     "chai": "^4.2.0",
