--- a/packages/qw-element/package.json
+++ b/packages/qw-element/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@qualweb/qw-element",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Utilities module for qualweb",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha",
+    "test": "mocha --require esm",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish --access=public"
@@ -28,19 +28,12 @@
   },
   "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.5",
-    "@types/domhandler": "^2.4.1",
-    "@types/node": "^13.11.0",
+    "@qualweb/types": "^0.4.6",
+    "@types/node": "^14.0.5",
     "chai": "^4.2.0",
-    "css": "^2.2.4",
-    "css-select": "^2.1.0",
-    "htmlparser2": "^4.0.0",
-    "mocha": "^7.0.1",
-    "typescript": "^3.8.3"
+    "esm": "^3.2.25",
+    "mocha": "^7.2.0",
+    "typescript": "^3.9.3"
   },
-  "dependencies": {
-    "domutils": "^2.0.0",
-    "htmlparser-to-html": "0.0.6",
-    "lodash.clone": "^4.5.0"
-  }
+  "dependencies": {}
 }
