--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Obtains a DOM from a given url",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -8,7 +8,7 @@
     "tsc": "tsc",
     "test": "mocha",
     "clean": "node clean.js",
-    "build": "npm run clean && tsc --build  && webpack --mode development",
+    "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish --access=public"
   },
   "repository": {
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/domhandler": "^2.4.1",
     "@types/node": "^13.11.0",
+    "@qualweb/types": "0.4.8",
     "chai": "^4.2.0",
     "css": "^2.2.4",
     "css-select": "^2.1.0",
@@ -39,8 +40,6 @@
   },
   "dependencies": {
     "node-fetch": "^2.6.0",
-    "@qualweb/types": "0.4.2",
-    "@qualweb/qw-element": "0.1.2",
     "domutils": "^2.0.0",
     "htmlparser-to-html": "0.0.6",
     "lodash.clone": "^4.5.0"
