--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/qw-page",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Utilities module for qualweb",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -38,8 +38,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@qualweb/types": "0.4.2",
-    "@qualweb/qw-element": "0.1.2",
+    "@qualweb/types": "^0.4.8",
+    "@qualweb/qw-element": "^0.1.5",
     "domutils": "^2.0.0",
     "htmlparser-to-html": "0.0.6",
     "lodash.clone": "^4.5.0"
