done/ missing evaluation modules(act/bp/css/html)

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,14 +46,10 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@qualweb/act-rules": "^0.4.1",
-    "@qualweb/dom": "^0.1.0",
-    "@qualweb/evaluation": "^0.1.0",
-    "@qualweb/best-practices": "^0.4.1",
+    "@qualweb/dom": "^0.1.1",
+    "@qualweb/evaluation": "^0.1.3",
     "@qualweb/crawler": "^0.1.1",
-    "@qualweb/css-techniques": "^0.3.8",
     "@qualweb/earl-reporter": "^0.2.5",
-    "@qualweb/html-techniques": "^0.4.1",
     "css": "^2.2.4",
     "css-select": "^2.1.0",
     "domhandler": "^3.0.0",
@@ -65,7 +61,8 @@
   },
   "devDependencies": {
     "@types/node": "^13.13.6",
-    "@qualweb/types": "^0.4.7",
+    "@types/puppeteer": "^3.0.0",
+    "@qualweb/types": "^0.4.10",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "node-fetch": "^2.6.0",
