--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Obtains a DOM from a given url",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -38,6 +38,10 @@
   "dependencies": {
     "node-fetch": "^2.6.0",
     "@qualweb/types": "0.4.10",
-    "@qualweb/qw-page": "0.1.5"
+    "@qualweb/qw-page": "0.1.5",
+    "@qualweb/act-rules": "^0.4.6",
+    "@qualweb/best-practices": "^0.4.2",
+    "@qualweb/html-techniques": "^0.4.2",
+    "@qualweb/css-techniques": "^0.3.8"
   }
 }
