Rule done. Merged needed

--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -48,6 +48,7 @@
     "test-r37": "mocha test/rules/QW-ACT-R37.spec.js",
     "test-r38": "mocha test/rules/QW-ACT-R38.spec.js",
     "test-r39": "mocha test/rules/QW-ACT-R39.spec.js",
+    "test-r40": "mocha test/rules/QW-ACT-R40.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
     "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
@@ -68,24 +69,25 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "0.4.4",
+    "@qualweb/dom": "^0.1.2",
+    "@qualweb/types": "^0.4.6",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^13.13.5",
+    "@types/node": "^13.13.9",
     "chai": "^4.2.0",
     "css": "^2.2.4",
-    "mocha": "^7.1.2",
+    "mocha": "^7.2.0",
     "node-fetch": "^2.6.0",
     "puppeteer": "^2.1.1",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.3",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "htmlparser2": "^4.0.0",
-    "@qualweb/qw-element": "0.1.2",
-    "@qualweb/qw-page": "0.1.3",
+    "@qualweb/qw-element": "^0.1.4",
+    "@qualweb/qw-page": "^0.1.4",
     "@qualweb/util": "0.3.3",
     "css-select": "^2.1.0",
+    "htmlparser2": "^4.0.0",
     "languagedetect": "^2.0.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
