first version of R44

--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -48,6 +48,7 @@
     "test-r37": "mocha test/rules/QW-ACT-R37.spec.js",
     "test-r38": "mocha test/rules/QW-ACT-R38.spec.js",
     "test-r39": "mocha test/rules/QW-ACT-R39.spec.js",
+    "test-r44": "mocha test/rules/QW-ACT-R44.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
     "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
@@ -84,7 +85,7 @@
     "htmlparser2": "^4.0.0",
     "@qualweb/qw-element": "^0.1.5",
     "@qualweb/qw-page": "^0.1.5",
-    "@qualweb/util": "0.3.5",
+    "@qualweb/util": "0.3.6",
     "css-select": "^2.1.0",
     "languagedetect": "^2.0.0",
     "lodash.clone": "^4.5.0",
