--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -83,9 +83,9 @@
   },
   "dependencies": {
     "htmlparser2": "^4.0.0",
-    "@qualweb/qw-element": "0.1.2",
-    "@qualweb/qw-page": "0.1.3",
-    "@qualweb/util": "0.3.3",
+    "@qualweb/qw-element": "^0.1.5",
+    "@qualweb/qw-page": "^0.1.5",
+    "@qualweb/util": "0.3.9",
     "css-select": "^2.1.0",
     "languagedetect": "^2.0.0",
     "lodash.clone": "^4.5.0",
