--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "description": "Obtains a DOM from a given url",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@types/domhandler": "^2.4.1",
     "@types/node": "^13.11.0",
-    "@qualweb/types": "0.4.8",
+    "@qualweb/types": "0.4.11",
     "chai": "^4.2.0",
     "css": "^2.2.4",
     "css-select": "^2.1.0",
@@ -42,6 +42,7 @@
     "node-fetch": "^2.6.0",
     "domutils": "^2.0.0",
     "htmlparser-to-html": "0.0.6",
-    "lodash.clone": "^4.5.0"
+    "lodash.clone": "^4.5.0",
+    "@qualweb/util": "0.3.16"
   }
 }
