--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Obtains a DOM from a given url",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -42,7 +42,6 @@
     "node-fetch": "^2.6.0",
     "domutils": "^2.0.0",
     "htmlparser-to-html": "0.0.6",
-    "lodash.clone": "^4.5.0",
-    "@qualweb/util": "0.3.16"
+    "lodash.clone": "^4.5.0"
   }
 }
