--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -28,20 +28,21 @@
   },
   "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
+    "@qualweb/types": "^0.4.17",
+    "@types/node-fetch": "^2.5.7",
     "chai": "^4.2.0",
-    "css": "^2.2.4",
+    "css": "^3.0.0",
     "css-select": "^2.1.0",
     "htmlparser2": "^4.0.0",
-    "mocha": "^7.0.1",
-    "typescript": "^3.8.3",
-    "@qualweb/types": "0.4.12"
+    "mocha": "^8.0.1",
+    "typescript": "^3.9.6"
   },
   "dependencies": {
-    "node-fetch": "^2.6.0",
-    "@qualweb/qw-page": "0.1.6",
     "@qualweb/act-rules": "^0.4.14",
     "@qualweb/best-practices": "^0.4.2",
+    "@qualweb/css-techniques": "^0.4.0",
     "@qualweb/html-techniques": "^0.4.3",
-    "@qualweb/css-techniques": "^0.3.9"
+    "@qualweb/qw-page": "^0.1.7",
+    "node-fetch": "^2.6.0"
   }
 }
