--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -54,17 +54,18 @@
     "chai": "^4.2.0",
     "css": "^3.0.0",
     "mocha": "^8.0.1",
-    "puppeteer": "^5.0.0",
-    "request": "^2.88.2",
     "stew-select": "0.0.5",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "playwright": "^1.1.1",
+    "node-fetch": "^2.6.0",
+    "css-select": "^2.1.0"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.6",
-    "@qualweb/qw-page": "^0.1.6",
-    "@qualweb/util": "0.3.18",
+    "@qualweb/qw-element": "^0.1.10",
+    "@qualweb/qw-page": "^0.1.11",
+    "@qualweb/util": "^0.3.20",
     "htmlparser2": "^4.1.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0"
