--- a/packages/qw-page/package.json
+++ b/packages/qw-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/qw-page",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "Utilities module for qualweb",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -28,16 +28,16 @@
   },
   "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.20",
+    "@qualweb/types": "^0.4.21",
     "chai": "^4.2.0",
     "esm": "^3.2.25",
     "mocha": "^8.0.1",
-    "puppeteer": "^5.0.0",
+    "playwright": "^1.2.0",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.10"
+    "@qualweb/qw-element": "^0.1.11"
   }
 }
