--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -6,23 +6,22 @@
   "types": "./node_modules/@qualweb/types",
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha test/**/*",
-    "test:bp1": "mocha test/best-practices/QW-BP1.spec.js",
-    "test:bp2": "mocha test/best-practices/QW-BP2.spec.js",
-    "test:bp3": "mocha test/best-practices/QW-BP3.spec.js",
-    "test:bp4": "mocha test/best-practices/QW-BP4.spec.js",
-    "test:bp5": "mocha test/best-practices/QW-BP5.spec.js",
-    "test:bp6": "mocha test/best-practices/QW-BP6.spec.js",
-    "test:bp7": "mocha test/best-practices/QW-BP7.spec.js",
-    "test:bp8": "mocha test/best-practices/QW-BP8.spec.js",
-    "test:bp9": "mocha test/best-practices/QW-BP9.spec.js",
-    "test:bp10": "mocha test/best-practices/QW-BP10.spec.js",
-    "test:bp11": "mocha test/best-practices/QW-BP11.spec.js",
-    "test:bp12": "mocha test/best-practices/QW-BP12.spec.js",
-    "test:bp13": "mocha test/best-practices/QW-BP13.spec.js",
-    "test:bp14": "mocha test/best-practices/QW-BP14.spec.js",
-    "test:bp15": "mocha test/best-practices/QW-BP15.spec.js",
-    "test:bp16": "mocha test/best-practices/QW-BP16.spec.js",
+    "test": "mocha --require esm test/**/*",
+    "test:bp1": "mocha --require esm test/best-practices/QW-BP1.spec.js",
+    "test:bp2": "mocha --require esm test/best-practices/QW-BP2.spec.js",
+    "test:bp3": "mocha --require esm test/best-practices/QW-BP3.spec.js",
+    "test:bp4": "mocha --require esm test/best-practices/QW-BP4.spec.js",
+    "test:bp5": "mocha --require esm test/best-practices/QW-BP5.spec.js",
+    "test:bp6": "mocha --require esm test/best-practices/QW-BP6.spec.js",
+    "test:bp7": "mocha --require esm test/best-practices/QW-BP7.spec.js",
+    "test:bp8": "mocha --require esm test/best-practices/QW-BP8.spec.js",
+    "test:bp9": "mocha --require esm test/best-practices/QW-BP9.spec.js",
+    "test:bp10": "mocha --require esm test/best-practices/QW-BP10.spec.js",
+    "test:bp11": "mocha --require esm test/best-practices/QW-BP11.spec.js",
+    "test:bp12": "mocha --require esm test/best-practices/QW-BP12.spec.js",
+    "test:bp13": "mocha --require esm test/best-practices/QW-BP13.spec.js",
+    "test:bp15": "mocha --require esm test/best-practices/QW-BP15.spec.js",
+    "test:bp16": "mocha --require esm test/best-practices/QW-BP16.spec.js",
     "clean": "node clean.js",
     "compile:bps": "node compile-bps.js",
     "build": "npm run compile:bps && npm run clean && tsc --build && webpack --mode development",
@@ -53,6 +52,7 @@
     "@types/puppeteer": "^3.0.1",
     "chai": "^4.2.0",
     "css": "^3.0.0",
+    "esm": "^3.2.25",
     "mocha": "^8.0.1",
     "puppeteer": "^5.0.0",
     "request": "^2.88.2",
@@ -62,8 +62,8 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.6",
-    "@qualweb/qw-page": "^0.1.6",
+    "@qualweb/qw-element": "^0.1.8",
+    "@qualweb/qw-page": "^0.1.9",
     "@qualweb/util": "0.3.18",
     "htmlparser2": "^4.1.0",
     "lodash.clone": "^4.5.0",
