--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "description": "Obtains a DOM from a given url",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
     "tsc": "tsc",
-    "test": "mocha",
+    "test": "mocha --require esm",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish --access=public"
@@ -28,21 +28,23 @@
   },
   "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.17",
+    "@qualweb/dom": "^0.1.14",
+    "@qualweb/types": "^0.4.23",
     "@types/node-fetch": "^2.5.7",
     "chai": "^4.2.0",
     "css": "^3.0.0",
     "css-select": "^2.1.0",
+    "esm": "^3.2.25",
     "htmlparser2": "^4.0.0",
     "mocha": "^8.0.1",
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "@qualweb/act-rules": "^0.4.14",
-    "@qualweb/best-practices": "^0.4.2",
-    "@qualweb/css-techniques": "^0.4.1",
-    "@qualweb/html-techniques": "^0.4.3",
-    "@qualweb/qw-page": "^0.1.7",
+    "@qualweb/act-rules": "^0.4.17",
+    "@qualweb/best-practices": "^0.4.4",
+    "@qualweb/css-techniques": "^0.4.3",
+    "@qualweb/html-techniques": "^0.4.6",
+    "@qualweb/qw-page": "^0.1.16",
     "node-fetch": "^2.6.0"
   }
 }
