--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -37,6 +37,7 @@
     "esm": "^3.2.25",
     "htmlparser2": "^4.0.0",
     "mocha": "^8.0.1",
+    "puppeteer": "^5.0.0",
     "typescript": "^3.9.6"
   },
   "dependencies": {
