--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -58,6 +58,8 @@
     "test-r47": "mocha test/rules/QW-ACT-R47.spec.js",
     "test-r48": "mocha test/rules/QW-ACT-R48.spec.js",
     "test-r49": "mocha test/rules/QW-ACT-R49.spec.js",
+    "test-r50": "mocha test/rules/QW-ACT-R50.spec.js",
+    "test-r51": "mocha test/rules/QW-ACT-R51.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
     "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
