Updated dependencies. QW-ACT-R7 fixed

--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -5,58 +5,56 @@
   "main": "dist/act.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
-    "test": "mocha --recursive",
     "tsc": "tsc",
-    "test:all": "npm install && mocha test/act-rules.spec.js",
-    "test-all": "mocha test/act-rules-all.spec.js",
-    "test-r1": "mocha test/rules/QW-ACT-R1.spec.js",
-    "test-r2": "mocha test/rules/QW-ACT-R2.spec.js",
-    "test-r3": "mocha test/rules/QW-ACT-R3.spec.js",
-    "test-r4": "mocha test/rules/QW-ACT-R4.spec.js",
-    "test-r5": "mocha test/rules/QW-ACT-R5.spec.js",
-    "test-r6": "mocha test/rules/QW-ACT-R6.spec.js",
-    "test-r7": "mocha test/rules/QW-ACT-R7.spec.js",
-    "test-r8": "mocha test/rules/QW-ACT-R8.spec.js",
-    "test-r9": "mocha test/rules/QW-ACT-R9.spec.js",
-    "test-r10": "mocha test/rules/QW-ACT-R10.spec.js",
-    "test-r11": "mocha test/rules/QW-ACT-R11.spec.js",
-    "test-r12": "mocha test/rules/QW-ACT-R12.spec.js",
-    "test-r13": "mocha test/rules/QW-ACT-R13.spec.js",
-    "test-r14": "mocha test/rules/QW-ACT-R14.spec.js",
-    "test-r15": "mocha test/rules/QW-ACT-R15.spec.js",
-    "test-r16": "mocha test/rules/QW-ACT-R16.spec.js",
-    "test-r17": "mocha test/rules/QW-ACT-R17.spec.js",
-    "test-r18": "mocha test/rules/QW-ACT-R18.spec.js",
-    "test-r19": "mocha test/rules/QW-ACT-R19.spec.js",
-    "test-r20": "mocha test/rules/QW-ACT-R20.spec.js",
-    "test-r21": "mocha test/rules/QW-ACT-R21.spec.js",
-    "test-r22": "mocha test/rules/QW-ACT-R22.spec.js",
-    "test-r23": "mocha test/rules/QW-ACT-R23.spec.js",
-    "test-r24": "mocha test/rules/QW-ACT-R24.spec.js",
-    "test-r25": "mocha test/rules/QW-ACT-R25.spec.js",
-    "test-r26": "mocha test/rules/QW-ACT-R26.spec.js",
-    "test-r27": "mocha test/rules/QW-ACT-R27.spec.js",
-    "test-r28": "mocha test/rules/QW-ACT-R28.spec.js",
-    "test-r29": "mocha test/rules/QW-ACT-R29.spec.js",
-    "test-r30": "mocha test/rules/QW-ACT-R30.spec.js",
-    "test-r31": "mocha test/rules/QW-ACT-R31.spec.js",
-    "test-r32": "mocha test/rules/QW-ACT-R32.spec.js",
-    "test-r33": "mocha test/rules/QW-ACT-R33.spec.js",
-    "test-r34": "mocha test/rules/QW-ACT-R34.spec.js",
-    "test-r35": "mocha test/rules/QW-ACT-R35.spec.js",
-    "test-r36": "mocha test/rules/QW-ACT-R36.spec.js",
-    "test-r37": "mocha test/rules/QW-ACT-R37.spec.js",
-    "test-r38": "mocha test/rules/QW-ACT-R38.spec.js",
-    "test-r39": "mocha test/rules/QW-ACT-R39.spec.js",
-    "test-r40": "mocha test/rules/QW-ACT-R40.spec.js",
-    "test-r41": "mocha test/rules/QW-ACT-R41.spec.js",
-    "test-r42": "mocha test/rules/QW-ACT-R42.spec.js",
-    "test-r43": "mocha test/rules/QW-ACT-R43.spec.js",
-    "test-r44": "mocha test/rules/QW-ACT-R44.spec.js",
-    "test-r45": "mocha test/rules/QW-ACT-R45.spec.js",
-    "test-r46": "mocha test/rules/QW-ACT-R46.spec.js",
-    "test-r47": "mocha test/rules/QW-ACT-R47.spec.js",
-    "test-r48": "mocha test/rules/QW-ACT-R48.spec.js",
+    "test:all": "npm install && mocha --require esm test/act-rules.spec.js",
+    "test:r1": "mocha --require esm test/rules/QW-ACT-R1.spec.js",
+    "test:r2": "mocha --require esm test/rules/QW-ACT-R2.spec.js",
+    "test:r3": "mocha --require esm test/rules/QW-ACT-R3.spec.js",
+    "test:r4": "mocha --require esm test/rules/QW-ACT-R4.spec.js",
+    "test:r5": "mocha --require esm test/rules/QW-ACT-R5.spec.js",
+    "test:r6": "mocha --require esm test/rules/QW-ACT-R6.spec.js",
+    "test:r7": "mocha --require esm test/rules/QW-ACT-R7.spec.js",
+    "test:r8": "mocha --require esm test/rules/QW-ACT-R8.spec.js",
+    "test:r9": "mocha --require esm test/rules/QW-ACT-R9.spec.js",
+    "test:r10": "mocha --require esm test/rules/QW-ACT-R10.spec.js",
+    "test:r11": "mocha --require esm test/rules/QW-ACT-R11.spec.js",
+    "test:r12": "mocha --require esm test/rules/QW-ACT-R12.spec.js",
+    "test:r13": "mocha --require esm test/rules/QW-ACT-R13.spec.js",
+    "test:r14": "mocha --require esm test/rules/QW-ACT-R14.spec.js",
+    "test:r15": "mocha --require esm test/rules/QW-ACT-R15.spec.js",
+    "test:r16": "mocha --require esm test/rules/QW-ACT-R16.spec.js",
+    "test:r17": "mocha --require esm test/rules/QW-ACT-R17.spec.js",
+    "test:r18": "mocha --require esm test/rules/QW-ACT-R18.spec.js",
+    "test:r19": "mocha --require esm test/rules/QW-ACT-R19.spec.js",
+    "test:r20": "mocha --require esm test/rules/QW-ACT-R20.spec.js",
+    "test:r21": "mocha --require esm test/rules/QW-ACT-R21.spec.js",
+    "test:r22": "mocha --require esm test/rules/QW-ACT-R22.spec.js",
+    "test:r23": "mocha --require esm test/rules/QW-ACT-R23.spec.js",
+    "test:r24": "mocha --require esm test/rules/QW-ACT-R24.spec.js",
+    "test:r25": "mocha --require esm test/rules/QW-ACT-R25.spec.js",
+    "test:r26": "mocha --require esm test/rules/QW-ACT-R26.spec.js",
+    "test:r27": "mocha --require esm test/rules/QW-ACT-R27.spec.js",
+    "test:r28": "mocha --require esm test/rules/QW-ACT-R28.spec.js",
+    "test:r29": "mocha --require esm test/rules/QW-ACT-R29.spec.js",
+    "test:r30": "mocha --require esm test/rules/QW-ACT-R30.spec.js",
+    "test:r31": "mocha --require esm test/rules/QW-ACT-R31.spec.js",
+    "test:r32": "mocha --require esm test/rules/QW-ACT-R32.spec.js",
+    "test:r33": "mocha --require esm test/rules/QW-ACT-R33.spec.js",
+    "test:r34": "mocha --require esm test/rules/QW-ACT-R34.spec.js",
+    "test:r35": "mocha --require esm test/rules/QW-ACT-R35.spec.js",
+    "test:r36": "mocha --require esm test/rules/QW-ACT-R36.spec.js",
+    "test:r37": "mocha --require esm test/rules/QW-ACT-R37.spec.js",
+    "test:r38": "mocha --require esm test/rules/QW-ACT-R38.spec.js",
+    "test:r39": "mocha --require esm test/rules/QW-ACT-R39.spec.js",
+    "test:r40": "mocha --require esm test/rules/QW-ACT-R40.spec.js",
+    "test:r41": "mocha --require esm test/rules/QW-ACT-R41.spec.js",
+    "test:r42": "mocha --require esm test/rules/QW-ACT-R42.spec.js",
+    "test:r43": "mocha --require esm test/rules/QW-ACT-R43.spec.js",
+    "test:r44": "mocha --require esm test/rules/QW-ACT-R44.spec.js",
+    "test:r45": "mocha --require esm test/rules/QW-ACT-R45.spec.js",
+    "test:r46": "mocha --require esm test/rules/QW-ACT-R46.spec.js",
+    "test:r47": "mocha --require esm test/rules/QW-ACT-R47.spec.js",
+    "test:r48": "mocha --require esm test/rules/QW-ACT-R48.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
     "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
@@ -78,22 +76,23 @@
   "license": "ISC",
   "devDependencies": {
     "@qualweb/dom": "^0.1.14",
-    "@qualweb/types": "^0.4.24",
+    "@qualweb/types": "^0.4.26",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^14.0.22",
+    "@types/node": "^14.0.26",
     "chai": "^4.2.0",
     "css": "^3.0.0",
+    "esm": "^3.2.25",
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
-    "playwright": "^1.2.0",
-    "typescript": "^3.9.6",
-    "webpack": "^4.43.0",
+    "playwright": "^1.2.1",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.14",
-    "@qualweb/qw-page": "^0.1.16",
-    "@qualweb/util": "^0.3.23",
+    "@qualweb/qw-element": "^0.1.15",
+    "@qualweb/qw-page": "^0.1.17",
+    "@qualweb/util": "^0.3.24",
     "css-select": "^2.1.0",
     "htmlparser2": "^4.0.0",
     "languagedetect": "^2.0.0",
