--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/best-practices",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "description": "QualWeb best practices",
   "main": "dist/bp.js",
   "types": "./node_modules/@qualweb/types",
@@ -45,22 +45,22 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/types": "0.4.23",
+    "@qualweb/types": "^0.4.26",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.0.14",
+    "@types/node": "^14.0.26",
     "@types/puppeteer": "^3.0.1",
     "chai": "^4.2.0",
     "css": "^3.0.0",
+    "css-select": "^2.1.0",
     "esm": "^3.2.25",
     "mocha": "^8.0.1",
-    "stew-select": "0.0.5",
-    "typescript": "^3.9.6",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "playwright": "^1.2.1",
     "node-fetch": "^2.6.0",
-    "css-select": "^2.1.0"
+    "playwright": "^1.2.1",
+    "stew-select": "0.0.5",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@qualweb/qw-element": "^0.1.10",
