--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.1.13",
+  "version": "0.1.15",
   "description": "Obtains a DOM from a given url",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -28,20 +28,20 @@
   },
   "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.20",
+    "@qualweb/types": "^0.4.26",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^14.0.14",
+    "@types/node": "^14.0.26",
     "chai": "^4.2.0",
     "css": "^3.0.0",
     "css-select": "^2.1.0",
-    "htmlparser2": "^4.1.0",
     "mocha": "^8.0.1",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
-    "node-fetch": "^2.6.0",
     "domutils": "^2.0.0",
     "htmlparser-to-html": "0.0.6",
-    "lodash.clone": "^4.5.0"
+    "htmlparser2": "^4.1.0",
+    "lodash.clone": "^4.5.0",
+    "node-fetch": "^2.6.0"
   }
 }
