--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -60,6 +60,16 @@
     "test-r49": "mocha test/rules/QW-ACT-R49.spec.js",
     "test-r50": "mocha test/rules/QW-ACT-R50.spec.js",
     "test-r51": "mocha test/rules/QW-ACT-R51.spec.js",
+    "test-r52": "mocha test/rules/QW-ACT-R52.spec.js",
+    "test-r53": "mocha test/rules/QW-ACT-R53.spec.js",
+    "test-r54": "mocha test/rules/QW-ACT-R54.spec.js",
+    "test-r55": "mocha test/rules/QW-ACT-R55.spec.js",
+    "test-r56": "mocha test/rules/QW-ACT-R56.spec.js",
+    "test-r57": "mocha test/rules/QW-ACT-R57.spec.js",
+    "test-r58": "mocha test/rules/QW-ACT-R58.spec.js",
+    "test-r59": "mocha test/rules/QW-ACT-R59.spec.js",
+    "test-r60": "mocha test/rules/QW-ACT-R60.spec.js",
+    "test-r61": "mocha test/rules/QW-ACT-R61.spec.js",
     "clean": "node clean.js",
     "compile:rules": "node compile-rules.js",
     "build": "npm run compile:rules && npm run clean && tsc --build && webpack --mode development",
@@ -96,7 +106,7 @@
   "dependencies": {
     "@qualweb/qw-element": "^0.1.14",
     "@qualweb/qw-page": "^0.1.16",
-    "@qualweb/util": "^0.3.21",
+    "@qualweb/util": "^0.3.27",
     "css-select": "^2.1.0",
     "htmlparser2": "^4.0.0",
     "languagedetect": "^2.0.0",
