--- a/packages/evaluation/package.json
+++ b/packages/evaluation/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@qualweb/evaluation",
-  "version": "0.1.34",
-  "description": "Obtains a DOM from a given url",
+  "version": "0.1.35",
+  "description": "Evaluates choosen modules",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
   "scripts": {
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/dom": "^0.1.15",
+    "@qualweb/dom": "^0.1.16",
     "@qualweb/types": "^0.4.27",
     "@types/node-fetch": "^2.5.7",
     "chai": "^4.2.0",
@@ -41,11 +41,11 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@qualweb/act-rules": "^0.4.23",
+    "@qualweb/act-rules": "^0.4.24",
     "@qualweb/best-practices": "^0.4.8",
     "@qualweb/css-techniques": "^0.4.10",
     "@qualweb/html-techniques": "^0.4.10",
-    "@qualweb/qw-page": "^0.1.19",
+    "@qualweb/qw-page": "^0.1.21",
     "node-fetch": "^2.6.0"
   }
 }
