--- a/packages/best-practices/package.json
+++ b/packages/best-practices/package.json
@@ -45,29 +45,30 @@
   },
   "homepage": "https://github.com/qualweb/best-practices#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.26",
+    "@qualweb/types": "^0.4.31",
     "@types/lodash.clone": "^4.5.6",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^14.0.27",
+    "@types/node": "^14.6.2",
     "@types/puppeteer": "^3.0.1",
     "chai": "^4.2.0",
     "css": "^3.0.0",
     "css-select": "^2.1.0",
     "esm": "^3.2.25",
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.3",
     "node-fetch": "^2.6.0",
-    "playwright": "^1.2.1",
+    "playwright": "^1.3.0",
     "stew-select": "0.0.5",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.0",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@qualweb/qw-element": "^0.1.10",
-    "@qualweb/qw-page": "^0.1.11",
-    "@qualweb/util": "^0.3.26",
+    "@qualweb/qw-element": "^0.1.18",
+    "@qualweb/qw-page": "^0.1.21",
+    "@qualweb/util": "^0.3.32",
     "htmlparser2": "^4.1.0",
     "lodash.clone": "^4.5.0",
-    "lodash.clonedeep": "^4.5.0"
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.intersection": "^4.4.0"
   }
 }
