--- a/packages/dom/package.json
+++ b/packages/dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/dom",
-  "version": "0.1.20",
+  "version": "0.1.21",
   "description": "Obtains a DOM from a given url",
   "main": "dist/index.js",
   "types": "./node_modules/@qualweb/types",
@@ -28,13 +28,14 @@
   },
   "homepage": "https://github.com/qualweb/util#readme",
   "devDependencies": {
-    "@qualweb/types": "^0.4.30",
+    "@qualweb/types": "^0.4.31",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^14.6.0",
+    "@types/node": "^14.6.3",
+    "@types/node-fetch": "^2.5.7",
     "chai": "^4.2.0",
     "css": "^3.0.0",
     "css-select": "^2.1.0",
-    "mocha": "^8.1.2",
+    "mocha": "^8.1.3",
     "typescript": "^4.0.2"
   },
   "dependencies": {
