--- a/packages/act-rules/package.json
+++ b/packages/act-rules/package.json
@@ -89,7 +89,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/dom": "^0.1.16",
+    "@qualweb/dom": "^0.1.24",
     "@qualweb/types": "^0.4.30",
     "@types/domhandler": "^2.4.1",
     "@types/node": "^14.0.27",
@@ -99,6 +99,7 @@
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
     "playwright": "^1.2.1",
+    "puppeteer": "^5.2.1",
     "typescript": "^3.9.7",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
