--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,15 +1,18 @@
 {
   "name": "@qualweb/core",
-  "version": "0.4.27",
+  "version": "0.4.28",
   "description": "QualWeb evaluator core engine",
   "main": "dist/index.js",
-  "types": "./node_modules/@qualweb/types",
+  "types": "./dist",
   "scripts": {
     "tsc": "tsc",
-    "test:core": "mocha test/core.spec.js",
-    "test:html": "mocha test/html.spec.js",
-    "test:crawler": "mocha test/crawler.spec.js",
-    "test:parallel": "mocha test/parallel.spec.js",
+    "test": "mocha",
+    "test:core": "mocha --require esm test/core.spec.js",
+    "test:html": "mocha --require esm test/html.spec.js",
+    "test:crawler": "mocha --require esm test/crawler.spec.js",
+    "test:file": "mocha --require esm test/file.spec.js",
+    "test:urls": "mocha --require esm test/urls.spec.js",
+    "test:parallel": "mocha --require esm test/parallel.spec.js",
     "clean": "node clean.js",
     "build": "npm run clean && tsc --build",
     "pub": "npm run build && npm publish"
@@ -50,20 +53,17 @@
     "@qualweb/dom": "^0.1.26",
     "@qualweb/earl-reporter": "^0.2.7",
     "@qualweb/evaluation": "^0.1.47",
-    "css": "^3.0.0",
-    "css-select": "^2.1.0",
-    "domhandler": "^3.2.0",
-    "domutils": "^2.4.1",
-    "htmlparser2": "^4.1.0",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "puppeteer": "^5.3.1"
   },
   "devDependencies": {
     "@qualweb/types": "^0.4.39",
-    "@types/node": "^14.11.2",
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/node": "^14.11.5",
     "@types/puppeteer": "^3.0.1",
     "chai": "^4.2.0",
+    "esm": "^3.2.25",
     "mocha": "^8.1.3",
     "node-fetch": "^2.6.1",
     "typescript": "^4.0.3"
